--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <title>mmAnalytics</title>
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="lib/ng-table/dist/ng-table.min.css">
   <script src="lib/jquery/dist/jquery.min.js"></script>
   <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/ng-table/dist/ng-table.js"></script>
   <script src="app.js"></script>
   <script src="core.js"></script>
 </head>
 <body>
   <div id="container" ng-app='mm' ng-controller='logs_ctrl'>
+
+    <hr />
 
     <table class="table table-striped">
       <tr>
