--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <body>
   <div id="container" ng-app='mm' ng-controller='logs_ctrl'>
 
-    <hr />
-
-    <table class="table table-striped">
+    <table ng-table="tableParams" class="table table-striped">
       <tr>
-        <th ng-repeat="name in logs.header">{{name}}</th>
+        <th ng-repeat="column in logs.header" >{{column}}</th>
       </tr>
-      <tr ng-repeat="row in logs.rows"> 
-        <td ng-repeat="name in logs.header">{{row[name]}}</td>
+
+      <tr ng-repeat="row in $data" >
+        <td ng-repeat="column in logs.header" >{{row[column]}}</td>
       </tr>
     </table>
 
