--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <div id="container" ng-app='mm' ng-controller='logs_ctrl'>
 
     <button class="btn btn-default export-btn" ng-click='exportCsv($event, "test.csv");'>Export</button>
+    <button class="btn btn-default export-btn" ng-show='paginationIsEnabled()' ng-click='disablePagination();'>Disable pagination</button>
+    <button class="btn btn-default export-btn" ng-show="!paginationIsEnabled()" ng-click='enablePagination();'>Enable pagination</button>
+    
     <table ng-table="tableParams" class="table table-striped" export-csv="helper.csv">
       <tr>
         <th ng-repeat="column in logs.header" >{{column}}</th>
